# cerebro-mcp

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: build-and-release.yml
src/cerebro_mcp/: clickhouse_client.py  config.py  docs_loader.py  manifest_loader.py  safety.py  server.py
src/cerebro_mcp/prompts/: templates.py
src/cerebro_mcp/prompts/agents/: analytics_reporter.md  reality_checker.md  ui_designer.md
src/cerebro_mcp/resources/: context.py  reference.py
src/cerebro_mcp/tools/: agents.py  dbt.py  metadata.py  query.py  query_async.py  reasoning.py  saved_queries.py  schema.py  session_state.py  visualization.py
tests/: test_manifest_loader.py  test_reasoning_tracing.py  test_safety.py  test_schema_cache.py  test_schema_injection.py  test_truncation.py  test_visualization.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  dev-data.ts  main.tsx  types.ts
ui/src/assets/: watermark.ts
ui/src/components/: ChartCard.tsx  ErrorBoundary.tsx  LoadingState.tsx  NumberDisplay.tsx  ReportContent.tsx  ReportFooter.tsx  ReportHeader.tsx  Sidebar.tsx
ui/src/hooks/: useReportData.ts  useTheme.ts
ui/src/lib/: echarts-setup.ts
ui/src/themes/: echarts-dark.ts  echarts-light.ts  global.css  tokens.css
ui/src/utils/: parseHtmlSections.ts
