[project]
name = "cerebro-mcp"
version = "0.1.0"
description = "MCP server for Gnosis Chain data platform - query ClickHouse with dbt context"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "clickhouse-connect>=0.7.0,<1.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
cerebro-mcp = "cerebro_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cerebro_mcp"]
